# DIDUnderLocalDependenceOnNetworks

./: .gitignore  README.md  main.py  pyproject.toml
paper/: draft_v6.tex
src/: README.md  utils.py
src/model/: __init__.py
src/model/bootstrap/: __init__.py  base_bootstrap.py  cluster_bootstrap.py  standard_bootstrap.py
src/model/common/: __init__.py  hac.py  models.py
src/model/proposed/: __init__.py  dr_adtt_influence.py  dr_aitt_influence.py  estimator.py  ipw_adtt_influence.py  ipw_aitt_influence.py
src/model/standard/: __init__.py  dr_did.py  ipw.py  modified_twfe.py  twfe.py
src/model/xu/: __init__.py  dr_estimator.py  dr_influence.py  dr_weights.py  ipw_estimator.py  ipw_influence.py  ipw_weights.py  propensity_scores.py
src/run/: __init__.py  common.py  real_data.py  simulation.py
src/settings/: __init__.py  config.py  functions.py  real_data_sez.py  simulation.py
src/visualization/: __init__.py  config.py  helpers.py  markdown.py  plots.py  robustness.py  utils.py  weight_analysis.py
