[project]
name = "spilloverdid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "pytz",
    "python-dateutil",
    "six",
    "packaging",
    "patsy",
    "joblib",
    "threadpoolctl",
    "Pillow",
    "pyparsing",
    "cycler",
    "kiwisolver",
    # "lightgbm>=4.0.0",  # Commented out because LightGBM is not used
    "doubleml>=0.7.0",
    "pytest-cov>=7.0.0",
    "multiprocessing-logging>=0.3.4",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
